data/derived/comb/progs/unify/prog3470.ml.out
Characters 72-78:
  | _ -> buildTimes (VarX)
                    ^^^^^^
Error: This expression has type expr but an expression was expected of type
         expr * expr
